--- a/views/shared/_head.slim
+++ b/views/shared/_head.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Project Name
+    title Nerd Jersey
     link rel='stylesheet' type='text/css' href='/stylesheets/style.css'
     script type='text/javascript' src='/javascripts/jquery-1.7.1.min.js'
     script type='text/javascript' src='/javascripts/script.js'
@@ -10,7 +10,7 @@ html
     .topbar
       .fill
         .container
-          a.brand href="/" Project name
+          a.brand href="/" Nerd Jersey
           ul.nav
             li.active
               a href="/" Home
