Make sure config.yml exists, give nice error if not

--- a/views/err_500.slim
+++ b/views/err_500.slim
@@ -3,7 +3,6 @@
 
   .hero-unit
     h1 500: Server Error
-    p Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-    a.btn.primary.large href='http://google.com' Learn more &raquo;
+    p There was an error in the application.
   
   == partial('shared/footer')
